syntax = "proto3";

package pb;

import "number_msg.proto";
// from the grpc folder run: protoc --go-grpc_out=./ --proto_path=proto/ proto/arithmetic_service.proto
option go_package = "./pb";

service ArithmeticService{
  rpc GetAddition(OperationParameters) returns (Answer){}
  rpc GetSubtraction(OperationParameters) returns (Answer){}
  rpc GetMultiplication(OperationParameters) returns (Answer){}
  rpc GetDivision(OperationParameters) returns (Answer){}
}